# book_circle

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt  validator.py
backend/apps/books/: authentication.py  models.py  serializers.py  views.py
backend/apps/books/migrations/: 0001_initial.py  0002_remove_book_publication_year_book_cover_image.py  0003_book_owner.py  0004_book_condition.py
backend/apps/borrow_requests/: apps.py  models.py
backend/apps/borrow_requests/migrations/: 0001_initial.py
backend/apps/users/: models.py  serializers.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_userprofile_address_userprofile_phone_and_more.py  0003_remove_userprofile_user_userprofile_name.py
backend/book_circle/: asgi.py  settings.py  urls.py
book_circle/: settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx  profile.js
frontend/src/components/common/: BookCard.jsx  BottomNav.jsx  Header.jsx  LoadingSpinner.jsx
frontend/src/components/layout/: AppLayout.jsx
frontend/src/pages/auth/: LandingPage.jsx  ProfileCreation.jsx
frontend/src/pages/books/: BookForm.jsx  BrowseBooks.jsx  MyBooks.jsx  MyLibrary.jsx
frontend/src/pages/dashboard/: Dashboard.jsx
frontend/src/pages/profile/: Profile.jsx
